[project]
name = "comfyui-fofr-toolkit"
description = "A simple set of tooling nodes"
version = "1.0.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/fofr/comfyui-fofr-toolkit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fofr"
DisplayName = "ComfyUI-fofr-toolkit"
Icon = ""
